# Stellaris-ai

./: .eslintrc.js  .gitignore  Cargo.toml  LICENSE  README.md  architecture.md  build.yml  hybrid-compute.md  index.html  next.config.js  package.json  performance.md  roadmap.md  security.md  tailwind.config.js  tauri.conf.json  tsconfig.json
docs/: ai-log.md  api.md  developer-guide.md  gpu-scheduler.md  performance.md  roadmap.md
src-tauri/: build.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/cloud/: mod.rs  openai.rs  stability.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/core/: config.rs  constants.rs  error.rs  events.rs  mod.rs  types.rs
src-tauri/src/engine/: cloud.rs  local.rs  mod.rs  provider.rs
src-tauri/src/models/: loader.rs  mod.rs  registry.rs
src-tauri/src/scheduler/: gpu.rs  hybrid.rs  mod.rs  task_queue.rs
src-tauri/src/security/: encryption.rs  mod.rs  sanitize.rs
src-tauri/src/utils/: cache.rs  logging.rs  mod.rs  paths.rs
src/app/: layout.tsx  page.tsx
src/components/features/: GPUMonitor.tsx  GalleryPanel.tsx  GeneratorPanel.tsx  SettingsPanel.tsx
src/components/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx
src/styles/: globals.css
