[package]
name = "stellaris-ai"
version = "0.1.0"
description = "Enterprise AI Image Generation System with Local + Cloud Hybrid Architecture"
authors = ["Stellaris AI Team"]
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/ebizome99/Stellaris-ai"
readme = "../README.md"
keywords = ["ai", "image-generation", "gpu", "stable-diffusion", "enterprise"]
categories = ["graphics", "multimedia::images", "science"]

[lib]
name = "stellaris_ai_lib"
path = "src/lib.rs"

[[bin]]
name = "stellaris-ai"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri Core
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"

# Async Runtime
tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["full"] }

# Web Framework
axum = { version = "0.7", features = ["macros", "ws"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", features = ["display", "parse"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# GPU & ML Dependencies (可选，后续启用)
# candle-core = "0.4"
# candle-nn = "0.4"
# candle-transformers = "0.4"
# cudarc = { version = "0.11", features = ["cuda-12050"], optional = true }

# Security
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = "1.7"

# HTTP Client for Cloud APIs
reqwest = { version = "0.12", features = ["json", "stream", "multipart", "rustls-tls"], default-features = false }
reqwest-eventsource = "0.6"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
parking_lot = "0.12"
dashmap = "5"
lru = "0.12"
bytes = "1"
futures = "0.3"
pin-project-lite = "0.2"
once_cell = "1.19"
regex = "1"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"

# System Info
sysinfo = "0.30"
nvml-wrapper = { version = "0.10", optional = true }
dirs = "5"
lazy_static = "1.4"

# Plugin System
libloading = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
criterion = { version = "0.5", features = ["async_tokio"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "errhandlingapi"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
cuda = ["nvml-wrapper"]
metal = []
cpu-only = []

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 2
